[metadata]
name = ou
version = 0.0.4
url = https://github.com/t-c-w/ou
platforms = any
description_file = README.md
description = Window pairs of sequences
author = Thor Whalen
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = ou

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
